Added cat url functionality